--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
 
 .alt-body {
     font-size: 14px;
-  }
+}
 
 .outer-container {
     margin: 24px;
@@ -82,6 +82,10 @@ ul {
     position: relative;
     overflow: hidden;
     background-color: #E1EBC3;
+}
+
+.introduction .super-inset {
+    padding-top: 20px;
 }
 .introduction .container {
     z-index: 3;
@@ -191,10 +195,13 @@ header, footer {
     background-color: #384020;
 }
 
+.photo-cardset1 {
+    background-color: #E1EBC3;
+}
+
 .about-gallery {
     display: flex;
     column-gap: 24px;
-    margin: 56px 0;
 }
 
 .about-gallery figure {
@@ -202,6 +209,20 @@ header, footer {
     border: 0.5px solid #2C2622;
     padding: 12px 12px 8px 12px;
     width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.about-gallery figcaption {
+    display: block;
+    font-size: 12px;
+    line-height: 1.4em;
+    text-align: center;
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 8px;
 }
 
 .about-gallery img {
@@ -210,17 +231,18 @@ header, footer {
     width: 100%;
 }
 
-.about-gallery figcaption {
-    display: block;
-    font-size: 12px;
-    line-height: 1.4em;
-    text-align: center;
+
+.projects {
+    background-color: #2C2622;
 }
 
-.about-gallery img {
-    height: 400px;
-    width: 400px;
-    border: 0.5px solid #2C2622;
+@media only screen and (max-width: 820px) {
+    .about-gallery {
+        display: block;
+    }
+    .about-gallery figure {
+        margin-bottom: 32px;
+    }
 }
 
 
