--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@ h2 {
     line-height: 1.2em;
 }
 
+h3 {
+    background-color: #2C2622;
+    color: #E1EBC3;
+    margin: 0;
+    line-height: 1.2em;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -63,7 +70,7 @@ ul {
     font-size: 50px;
     font-style: normal;
     margin: 0 auto;
-    padding-top: 150px;
+    padding-top: 100px;
     width: 90%;
 }
 
@@ -204,13 +211,23 @@ header, footer {
     column-gap: 24px;
 }
 
+figure {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+    unicode-bidi: isolate;
+}
+
 .about-gallery figure {
     background: #FFF;
     border: 0.5px solid #2C2622;
     padding: 12px 12px 8px 12px;
-    width: 100%;
+    width: 90%;
     margin-top: 50px;
     margin-bottom: 50px;
+    
 }
 
 .about-gallery figcaption {
@@ -231,14 +248,71 @@ header, footer {
     width: 100%;
 }
 
-
-.projects {
-    background-image: url(/Images/olive.jpg);
+.projects-banner {
+    background-color: #E1EBC3;
+    position: relative;
+    overflow: hidden;
 }
 
-.projects .very-inset {
+.box {
+    background-color: #E1EBC3;
+    margin-top: 8%;
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 8%;
+    padding: 14px 16px;
+}
+
+.projects-banner .very-inset {
+    padding-top: 100px;
+    background-color: #E1EBC3;
+}
+
+.projects-banner .super-inset {
+    background-color: #E1EBC3;
+}
+
+.projects-grid li {
+    box-sizing: border-box;
+    margin-bottom: 80px;
+    width: 46.61016949%; /* 660/1416 */
+}
+
+.projects-grid li .image-container {
+height: 364px;
+margin-bottom: 24px;
+}
+
+.projects-grid li:hover .text {
+    border-bottom: 0.5px solid #faefdd;
+}
+
+
+.double-line {
     background-color: #2C2622;
+    background-size: 40%;
 }
+
+.image-container {
+    margin-bottom: 24px;
+    display: block;
+    height: 200px;
+    overflow: hidden;
+    border: 0.5px solid #faefdd;
+}
+
+/*
+.project1 {
+    color: #2C2622;
+    background: #faefdd;
+    border: 50px solid #2C2622;
+    margin: 48px 0 -140px 0;
+    padding: 8.474576271%;
+    position: relative;
+    text-align: left;
+    z-index: 4;
+}
+*/
 
 
 @media only screen and (max-width: 820px) {
@@ -246,14 +320,14 @@ header, footer {
         display: block;
     }
     .about-gallery figure {
-        margin-bottom: 32px;
+        flex: 100%;
+        max-width: 100%;
     }
 }
 
 
 
 @media screen and (min-width: 1201px) {
-
     .wrapper {
         max-width: 50%;
     }
