--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
     line-height: 1.5em;
 }
 
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+
 h1 {
     background-color: #E1EBC3;
     color: #384020;
@@ -36,11 +41,25 @@ h3 {
     line-height: 1.2em;
 }
 
+p {
+    line-height: 1.5em;
+}
+
+html, body, div, span, h1, h2, h3, a, th, td, figure, figcaption, footer, header, nav {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 10%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 
 .alt-body {
     font-size: 14px;
@@ -114,6 +133,7 @@ a {
   color: #E1EBC3;
   text-decoration: none;
 }
+
 a:hover {
   border-bottom: 0.5px solid #98A869;
   color: #98A869;
@@ -147,7 +167,7 @@ a:hover {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-    font-family: "Zilla Slab", serif;
+    font-family: "logic-monoscript", mono;
     font-weight: 300;
     font-style: normal;
     letter-spacing: 0.02em
@@ -185,6 +205,7 @@ header, footer {
     background-color: #E1EBC3;
 }
 
+
 .greeting .very-inset {
     position: relative;
     overflow: hidden;
@@ -192,10 +213,10 @@ header, footer {
     padding-top: 100px;
 }
 
-
 .greeting .super-inset {
     padding-top: 10px;
     padding-bottom: 100px;
+    background-color: #E1EBC3;
 }
 
 .photo-cardset {
@@ -248,6 +269,10 @@ figure {
     width: 100%;
 }
 
+/*
+  style for projects page
+*/
+
 .projects-banner {
     background-color: #E1EBC3;
     position: relative;
@@ -264,7 +289,7 @@ figure {
 }
 
 .projects-banner .very-inset {
-    padding-top: 100px;
+    padding-top: 50px;
     background-color: #E1EBC3;
 }
 
@@ -272,26 +297,72 @@ figure {
     background-color: #E1EBC3;
 }
 
+.projects-grid {
+    display: flex;
+    column-gap: 24px;
+    background-color: #2C2622;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.projects-grid ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 32px;
+}
+/*
+.image-container {
+    border: 0.5px solid #E1EBC3;
+    background-color: #2C2622;
+    width: 100%;
+    height: 364px;
+    margin-bottom: 24px;
+}
+*/
+
+.projects-preview li {
+    background: #2C2622;
+    box-sizing: border-box;
+    border: 0.5px solid #faefdd;
+    padding: 24px;
+    margin-bottom: 32px;
+    width: 31.07344633%;
+}
+
+.projects-preview .container {
+    position: relative;
+    z-index: 2;
+}
+
+br {
+    line-height: 0em;
+}
+
+.projects-preview img {
+    display: block;
+    width: 100%;
+    filter: grayscale(100%) invert(10%) sepia(8%) saturate(350%) hue-rotate(351deg) brightness(105%) contrast(95%);
+    margin-bottom: 32px;
+    transition: transform 8s;
+    height: auto;
+  }
+
 .projects-grid li {
     box-sizing: border-box;
     margin-bottom: 80px;
-    width: 46.61016949%; /* 660/1416 */
+    width: 46.61016949%;
 }
 
 .projects-grid li .image-container {
-height: 364px;
-margin-bottom: 24px;
+    height: 364px;
+    margin-bottom: 24px;
 }
 
 .projects-grid li:hover .text {
     border-bottom: 0.5px solid #faefdd;
 }
 
-
-.double-line {
-    background-color: #2C2622;
-    background-size: 40%;
-}
 
 .image-container {
     margin-bottom: 24px;
@@ -301,6 +372,103 @@ margin-bottom: 24px;
     border: 0.5px solid #faefdd;
 }
 
+.projects-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.image-container:hover {
+    color: #98A869
+}
+
+.projects-title h3 {
+    background-color: #2C2622;
+    color: #E1EBC3;
+    margin: 0;
+    line-height: 1.2em;
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+ 
+}
+
+h3:hover {
+    color: #98A869;
+}
+
+.projects-title .link {
+    border: 0.5px solid #faefdd;
+    font-family: "logic-monoscript", mono;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: 0.01em;
+    line-height: 1.5em;
+    text-transform: uppercase;
+    flex-shrink: 0;
+    padding: 6px 16px;
+    border-radius: 40px;
+    color: #E1EBC3;
+    
+}
+
+.contact-links {
+    margin: 0 auto;
+    width: 90%; /* 694/1416 */
+    padding-bottom: 150px;
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    padding-top: 30px;
+    line-height: 2em;
+}
+
+.projects-title .link:hover {
+    color: #98A869;
+}
+
+@media only screen and (max-width: 700px) {
+    .projects-preview li, .projects-preview p {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .projects-preview li {
+        padding: 16px;
+    }
+
+    .projects-preview ul {
+        margin: 16px 0 0 0;
+        display: block;
+      }
+}
+
+@media only screen and (max-width: 820px) {
+    .projects-preview li {
+        width: 47.08879185%;
+    }
+    .projects-preview li {
+        width: 100%;
+    }
+    .redesign-grid li{
+        width: 100%;
+    }
+    .introduction img {
+        height: 300px;
+        width: 300px;
+    }
+}
+
+@media only screen and (max-width: 1110px) {
+    .projects-grid li {
+        margin-bottom: 40px;
+    }
+}
 /*
 .project1 {
     color: #2C2622;
@@ -315,15 +483,107 @@ margin-bottom: 24px;
 */
 
 
+
+.mobile-nav {
+    position: relative;
+    width: 90%;
+    padding: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.mobile-nav a {
+    background: #E1EBC3;
+    border-radius: 100px;
+    border-bottom: none;
+    margin: 0 0 4px 0;
+    padding: 12px 16px 8px 16px;
+    text-transform: uppercase;
+    font-family: "logic-monoscript", mono;
+    color:#384020;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: 0em;
+    text-decoration: none;
+    
+  }
+/*
+  .mobile-nav ul {
+    display: flex;
+    justify-content: space-between;
+  }
+
+*/
+.project-body .container {
+    background-color: #2C2622;
+}
+
+.project-body .very-inset {
+    background-color: #2C2622;
+    font-size: 40px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+
+.project-body .super-inset {
+    color: #E1EBC3;
+    margin: 0 auto;
+    padding-bottom: 0;
+}
+
+.redesign-grid {
+    display: flex;
+    column-gap: 50px;
+    background-color: #2C2622;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.mobile-image-container {
+    border: 0.5px solid #E1EBC3;
+    background-color: #2C2622;
+    width: 100%;
+    height: auto;
+    display: block;
+    overflow: hidden;
+    border: 0.5px solid #faefdd;
+    padding: 10 10 10 10;
+    margin-bottom: 30px;
+}
+
+
+/*
+.mobile-image {
+    display: block;
+    object-fit: fill;
+    height: 100px;
+    max-width: 80%;
+    height: auto;
+}
+*/
+
+.project-body img {
+    height: auto;
+    width: 100%;
+    border: 0.5px solid #2C2622;
+    align-items: center;
+}
+
+
 @media only screen and (max-width: 820px) {
     .about-gallery {
         display: block;
+        flex-direction: column;
+        width: 100%;
     }
-    .about-gallery figure {
-        flex: 100%;
-        max-width: 100%;
-    }
+    
 }
+
+
+
+
 
 
 
